--- a/myfirstmap/views/index.ejs
+++ b/myfirstmap/views/index.ejs
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=10jnoot7f3"></script>
 </head>
 <body>
+<div id="navbar">myfirstmap</div>
 <div id="map" style="width:100%;height:100vh;"></div>
 
 <script>
