--- a/myfirstmap/public/stylesheets/style.css
+++ b/myfirstmap/public/stylesheets/style.css
@@ -14,3 +14,20 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+#infoBox {
+  position: absolute;
+  top: 100px;
+  left: 20px;
+  z-index: 10000;
+  background: white; 
+  padding: 15px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  text-align: center;
+}
+
+#infotitle {
+  font-size: 15px;
+  font-weight: bolder;
+}
