--- a/myfirstmap/views/index.ejs
+++ b/myfirstmap/views/index.ejs
@@ -16,13 +16,27 @@
 </div>
 <div id="map" style="width:100%;height:100vh;"></div>
 
+
+<script type="text/javascript" src="/data/data.js"></script>
 <script>
-var mapOptions = {
+const mapOptions = {
     center: new naver.maps.LatLng(37.3595704, 127.105399),
     zoom: 10
 };
 
-var map = new naver.maps.Map('map', mapOptions);
+const map = new naver.maps.Map('map', mapOptions);
+
+for (let i in data) {
+    let target = data[i];
+    let latlng = new naver.maps.LatLng(target.lat, target.lng);
+    marker = new naver.maps.Marker({
+        map: map,
+        position: latlng,
+        icon: {
+            content: "<div class='marker'></div>",
+        }
+    });
+}
 </script>
 </body>
 </html>
