--- a/myfirstmap/views/index.ejs
+++ b/myfirstmap/views/index.ejs
@@ -74,6 +74,8 @@ function ClickMap(i){
 }
 
 
+// 마커와 infowindow들을 찾아서 리스트에 등록하고 infowindow가 있으면 닫아준다.
+// 만약 활성화 된 창이 없다면 해당 마커의 infowindow를 활성화한다. 
 function getClickHandler(i) {
 return function () {
     const marker = markerList[i];
