--- a/myfirstmap/views/index.ejs
+++ b/myfirstmap/views/index.ejs
@@ -7,6 +7,7 @@
     <title>My first map</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=10jnoot7f3"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
 <div id="navbar">myfirstmap</div>
@@ -77,17 +78,48 @@ function ClickMap(i){
 // 마커와 infowindow들을 찾아서 리스트에 등록하고 infowindow가 있으면 닫아준다.
 // 만약 활성화 된 창이 없다면 해당 마커의 infowindow를 활성화한다. 
 function getClickHandler(i) {
-return function () {
-    const marker = markerList[i];
-    const infowindow = infowindowlist[i];
-    if(infowindow.getMap()) {
-        infowindow.close();
-    
-    }else {
-        infowindow.open(map, marker)   
+    return function () {
+        const marker = markerList[i];
+        const infowindow = infowindowlist[i];
+        if(infowindow.getMap()) {
+            infowindow.close();
+        
+        }else {
+            infowindow.open(map, marker);
+        }
     }
 }
-}
+
+// 현재 위치 마커 최초 1회만 실행되도록 설정
+let currentUse = true;
+
+$("#current").click(() => {
+    if("geolocation" in navigator) {
+        navigator.geolocation.getCurrentPosition(function (position) {
+            const lat = position.coords.latitude;   // 현재 위치 위도값
+            const lng = position.coords.longitude;  // 현재 위치 경도값
+            const latlng = new naver.maps.LatLng(lat,lng);  // 위도, 경도값 받아오기
+            if (currentUse) {
+                marker = new naver.maps.Marker({
+                    map: map,
+                    position: latlng,
+                    icon: { // 커스텀 아이콘으로 변경
+                        content: '<img class="pulse" draggable="false" unselectable="on" src="https://myfirstmap.s3.ap-northeast-2.amazonaws.com/circle.png">',
+                        anchor: new naver.maps.Point(11,11)
+                    }
+                });
+                currentUse = false;
+            }
+            
+
+            // 현재 위치가 찍혀질 경우 화면이 이동됨
+            map.setZoom(14,false);
+            map.panTo(latlng);
+        });
+    }else {
+        alert('위치 정보 사용 불가능');
+    }
+})
 </script>
 </body>
 </html>
