--- a/myfirstmap/views/index.ejs
+++ b/myfirstmap/views/index.ejs
@@ -15,6 +15,11 @@
     <div id="infoTitle">현재날짜</div>
     <div id="infoContent">2021.03.08</div>
 </div>
+<div id="search">
+    <input type="text" id="search_input" placeholder="목적을 입력해주세요" />
+    <button id="search_button">검색</button>
+</div>
+<div id="current">현재 위치</div>
 <div id="map" style="width:100%;height:100vh;"></div>
 
 
