--- a/myfirstmap/views/index.ejs
+++ b/myfirstmap/views/index.ejs
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=10jnoot7f3"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- kakao api key -->
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6c54e934f68c6dfce32cff4163504cac&libraries=services"></script>
 </head>
 <body>
 <div id="navbar">myfirstmap</div>
